ingress-hosts.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: falcon-ingress
  namespace: staging
spec:
  rules:
  - host: falcon.tonguru.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: falcon-webapp-service
            port:
              number: 80
